--- a/.github/workflows/moodle-plugin-ci.yml
+++ b/.github/workflows/moodle-plugin-ci.yml
@@ -36,10 +36,16 @@ jobs:
           - php: '8.1'
             moodle-branch: 'MOODLE_403_STABLE'
             database: pgsql
+          - php: '8.2'
+            moodle-branch: 'MOODLE_403_STABLE'
+            database: pgsql
           - php: '8.0'
             moodle-branch: 'MOODLE_403_STABLE'
             database: mariadb
           - php: '8.1'
+            moodle-branch: 'MOODLE_403_STABLE'
+            database: mariadb
+          - php: '8.2'
             moodle-branch: 'MOODLE_403_STABLE'
             database: mariadb
           - php: '8.0'
