--- a/.github/workflows/moodle-plugin-ci.yml
+++ b/.github/workflows/moodle-plugin-ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14
+        image: postgres:15
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -31,6 +31,24 @@ jobs:
       matrix:
         include:
           - php: '8.2'
+            moodle-branch: 'MOODLE_501_STABLE'
+            database: pgsql
+          - php: '8.3'
+            moodle-branch: 'MOODLE_501_STABLE'
+            database: pgsql
+          - php: '8.4'
+            moodle-branch: 'MOODLE_501_STABLE'
+            database: pgsql
+          - php: '8.2'
+            moodle-branch: 'MOODLE_501_STABLE'
+            database: mariadb
+          - php: '8.3'
+            moodle-branch: 'MOODLE_501_STABLE'
+            database: mariadb
+          - php: '8.4'
+            moodle-branch: 'MOODLE_501_STABLE'
+            database: mariadb
+          - php: '8.2'
             moodle-branch: 'MOODLE_500_STABLE'
             database: pgsql
           - php: '8.3'
@@ -84,47 +102,23 @@ jobs:
           - php: '8.3'
             moodle-branch: 'MOODLE_404_STABLE'
             database: mariadb
-          - php: '8.0'
-            moodle-branch: 'MOODLE_403_STABLE'
-            database: pgsql
           - php: '8.1'
             moodle-branch: 'MOODLE_403_STABLE'
             database: pgsql
           - php: '8.2'
             moodle-branch: 'MOODLE_403_STABLE'
             database: pgsql
-          - php: '8.0'
-            moodle-branch: 'MOODLE_403_STABLE'
-            database: mariadb
           - php: '8.1'
             moodle-branch: 'MOODLE_403_STABLE'
             database: mariadb
           - php: '8.2'
             moodle-branch: 'MOODLE_403_STABLE'
             database: mariadb
-          - php: '8.0'
+          - php: '8.1'
             moodle-branch: 'MOODLE_402_STABLE'
             database: pgsql
           - php: '8.1'
             moodle-branch: 'MOODLE_402_STABLE'
-            database: pgsql
-          - php: '8.0'
-            moodle-branch: 'MOODLE_402_STABLE'
-            database: mariadb
-          - php: '8.1'
-            moodle-branch: 'MOODLE_402_STABLE'
-            database: mariadb
-          - php: '8.0'
-            moodle-branch: 'MOODLE_401_STABLE'
-            database: pgsql
-          - php: '7.4'
-            moodle-branch: 'MOODLE_401_STABLE'
-            database: pgsql
-          - php: '8.0'
-            moodle-branch: 'MOODLE_401_STABLE'
-            database: mariadb
-          - php: '7.4'
-            moodle-branch: 'MOODLE_401_STABLE'
             database: mariadb
 
     steps:
@@ -195,7 +189,14 @@ jobs:
 
       - name: JS Unit tests
         if: ${{ always() }}
-        run: cd /home/runner/work/moodle-tiny_cloze/moodle-tiny_cloze/moodle/lib/editor/tiny/plugins/cloze/tests/js && npm install && npm test
+        run: |
+          path=/home/runner/work/moodle-tiny_cloze/moodle-tiny_cloze/moodle
+          if [[ $MOODLE_BRANCH =~ MOODLE_50[1-5]_STABLE ]]; then
+            path+=/public
+          fi
+          cd ${path}/lib/editor/tiny/plugins/cloze/tests/js && npm install && npm test
+        env:
+          MOODLE_BRANCH: ${{ matrix.moodle-branch }}
 
       - name: Behat features
         if: ${{ always() }}
